k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: scv-frontend-svc
  namespace: scv
spec:
  selector:
    app: scv-frontend
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
