k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scv-ingress
  namespace: scv
  annotations:
    kubernetes.io/ingress.class: 'traefik'
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: 'true'
spec:
  rules:
    - host: scv.hughdo.dev
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: scv-frontend-svc
                port:
                  number: 80

  tls:
    - hosts:
        - scv.hughdo.dev
        - www.scv.hughdo.dev
      secretName: scv-crt-secret
